<resources>
    <string name="app_name">DigitalHouse</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_login">Log in</string>
    <string name="input_login_facebook">Login with Facebook</string>
    <string name="input_login_twitter">Login with Twitter</string>
    <string name="input_login_google">Login with Google</string>
    <string name="register_now">Register now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu navigation -->
    <string name="posts">Posts</string>
    <string name="comments">Comments</string>
    <string name="events">Events</string>
    <string name="co_learning">Co-learning</string>
    <string name="tab_text_posts">Posts</string>
    <string name="tab_text_events">Events</string>
    <string name="tab_text_colearning">Co-learning</string>
    <string name="search">Search</string>
</resources>
