<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_comments"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/comments" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_colearning"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/co_learning" />
    </group>

</menu>
